@@ -1,3 +1,12 @@
+2000-06-18  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* Http.cc: use strncasecmp for special cookie checking.
+
+2000-06-15  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* FileCopyFtp.cc, Fish.cc, Fish.h, FtpDirList.cc, FtpListInfo.cc,
+	  HttpDir.cc, NetAccess.cc, ftpclass.h: use off_t in many places.
+
 2000-06-10  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* GetJob.cc: new setting xfer:make-backup.
